--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo 'test'"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.15",
     "axios": "^1.2.0",
     "pinia": "^2.0.26",
     "vue": "^3.2.41",
