--- a/.eslintignore
+++ b/.eslintignore
@@ -3,8 +3,9 @@ node_modules
 !.prettierrc.js
 components.d.ts
 auto-imports.d.ts
-vite-env.d.ts
+vite.config.ts
 *.css
 *.less
 *.sass
 *.scss
+*.cjs
