--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "cz-git": "^1.3.12",
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-define-config": "^1.12.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
     "husky": "^8.0.0",
     "less": "^4.1.3",
@@ -45,7 +48,7 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-less": "^1.0.6",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.6.4",
+    "typescript": "^4.9.3",
     "vite": "^3.2.3",
     "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.9"
