--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "echo 'test'"
+    "test": "jest"
   },
   "dependencies": {
     "ant-design-vue": "^3.2.15",
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "cz-git": "^1.3.12",
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -31,11 +33,13 @@
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-define-config": "^1.12.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.8.0",
     "husky": "^8.0.0",
+    "jest": "^26.6.3",
     "less": "^4.1.3",
     "lint-staged": "^13.0.4",
     "postcss-html": "^1.5.0",
@@ -48,9 +52,11 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-less": "^1.0.6",
     "stylelint-order": "^5.0.0",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.9.3",
     "vite": "^3.2.3",
     "vue-eslint-parser": "^9.1.0",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^1.0.9"
   },
   "lint-staged": {
